--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,76 +1,131 @@
-
-.navbar{
-    background-color: #ececec;
+.NavbarItems {
+    background: #fff;
     height: 80px;
     display: flex;
-    justify-content: start;
-    align-items: center;
-}
-.menu-bars{
-    margin-left: 2rem;
-    font-size: 2rem;
-    background: none;
-}
-
-.nav-menu{
-    background-color: #ececec;
-    width: 250px;
-    height: 100vh;
-    display: grid;
     justify-content: center;
-    position: fixed;
-    top: -1%;
-    left: -100%;
-    
-    
-    
-    transition:none;
-    
-}
-.nav-menu.active{
-    left: -100;
-    transition: 350ms;
+    align-items: center;
+    font-size: 1.2rem;
 }
 
-.nav-text{
-    display:flex ;
-    justify-content: space-between;
-    align-items: center;
-    padding:  8px 0px 8px 16px;
+
+
+.nav-menu {
+    display: grid;
+    grid-template-columns: repeat(6, auto);
+    grid-gap: 10px;
     list-style: none;
-    height: 60px;
+    text-align: center;
+    width: 70vw;
+    justify-content: end;
+    margin-right: 2rem;
 }
-.nav-text a{
+
+.nav-links {
+    color: white;
     text-decoration: none;
-    color: #af9a7d;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
+    padding: 0.5rem 1rem;
+}
+
+.nav-links:hover {
+    background-color: #6d76f7;
     border-radius: 4px;
-  
-}
-.nav-text a:hover{
-    background-color: #dac7c7;
+    transition: all 0.2s ease-out;
 }
 
-.nav-menu-items{
-    width: 100%;
-    background-color: #ececec;
-   
+.fa-bars {
+    color: #af9a7d;
+}
+.navbar-logo{
+    background: #af9a7d;
+}
+.nav-links-mobile {
+    display: none;
 }
 
-.navbar-toggle{
-    background-color: #ececec;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+.menu-icon {
+    display: none;
 }
 
-span{
-    margin-left: 16px;
+@media screen and (max-width: 960px) {
+    .NavbarItems {
+        position: relative;
+    }
+
+    .nav-menu {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 500px;
+        position: absolute;
+        top: 80px;
+        left: -100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+    }
+
+    .nav-menu.active {
+        background: #af9a7d;
+        left: 0;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 1;
+    }
+
+    .nav-links {
+        text-align: center;
+        padding: 1.5rem;
+        width: 100%;
+        display: table;
+    }
+
+    .nav-links:hover {
+        background-color: #7577fa;
+        border-radius: 0;
+    }
+
+    .navbar-logo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(25%, 50%);
+    }
+
+    .menu-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translate(-100%, 60%);
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
+
+    .fa-times {
+        color: #fff;
+        font-size: 2rem;
+    }
+
+    .nav-links-mobile {
+        display: block;
+        text-align: center;
+        padding: 1.5rem;
+        margin: 2rem auto;
+        border-radius: 4px;
+        width: 80%;
+        background: #4ad9e4;
+        text-decoration: none;
+        color: #fff;
+        font-size: 1.5rem;
+    }
+
+    .nav-links-mobile:hover {
+        background: #fff;
+        color: #6568F4;
+        transition: 250ms;
+    }
+
+    Button {
+        display: none;
+    }
 }
+
