--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,12 @@
 .NavbarItems {
     background: #fff;
-    height: 80px;
+    height:100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
 }
+
 
 
 
@@ -21,13 +22,13 @@
 }
 
 .nav-links {
-    color: white;
+    color: #af9a7d;
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
 
 .nav-links:hover {
-    background-color: #6d76f7;
+    background-color: grey;
     border-radius: 4px;
     transition: all 0.2s ease-out;
 }
@@ -37,6 +38,7 @@
 }
 .navbar-logo{
     background: #af9a7d;
+    
 }
 .nav-links-mobile {
     display: none;
@@ -76,10 +78,11 @@
         padding: 1.5rem;
         width: 100%;
         display: table;
+        color: #fff;
     }
 
     .nav-links:hover {
-        background-color: #7577fa;
+        background-color: grey;
         border-radius: 0;
     }
 
@@ -101,7 +104,7 @@
     }
 
     .fa-times {
-        color: #fff;
+        color: #af9a7d;
         font-size: 2rem;
     }
 
@@ -112,15 +115,14 @@
         margin: 2rem auto;
         border-radius: 4px;
         width: 80%;
-        background: #4ad9e4;
         text-decoration: none;
         color: #fff;
         font-size: 1.5rem;
     }
 
     .nav-links-mobile:hover {
-        background: #fff;
-        color: #6568F4;
+        background: none;
+        color: gray;
         transition: 250ms;
     }
 
